# iroh-webrtc-transport

./: .gitignore  Cargo.toml  README.md
browser-iroh/: Cargo.toml
browser-iroh/src/: lib.rs
examples/: client.rs  server.rs  webrtc_loopback.rs
scripts/: build-browser-wasm.sh
src/: bridge.rs  endpoint.rs  jsep_alpn.rs  jsep_core.rs  jsep_envelope.rs  jsep_quic.rs  jsep_signaling.rs  jsep_ws.rs  lib.rs  sender.rs  str0m_peer.rs  transport.rs
static/: app.js  index.html
